--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col-lg-8 col-sm-9">
           <div class="left-info">
             <ul>
-              <li><a href="#"><i class="fa fa-envelope"></i>tabarak7d@gmail.com</a></li>
+              <li><a href="#"><i class="fa fa-envelope"></i>tabareksoft@gmail.com</a></li>
               <li><a href="#"><i class="fa fa-map-marker"></i>Baghdad</a></li>
             </ul>
           </div>
@@ -99,7 +99,7 @@
             <h4>أكتشف <em> عالم برامج </em> الأدارة <span>مع المساعد</span></h4>
             <p dir="rtl">
               المساعد لزيادة انتاجياتك ومساعدتك في مسك المشروع،
-              من برامج ادارة المشاريع الصغير .
+              من برامج ادارة المشاريع الصغيره .
               
             <div class="main-button scroll-to-section"><a href="#services">المزيد</a></div>
           
@@ -219,7 +219,7 @@
                   </p>
                   <div dir="ltr" style="margin-bottom: 5%;">
                   <h6>@helperSoft</h6>
-                  <h6>tabarak7d@gmail.com</h6>
+                  <h6>tabareksoft@gmail.com</h6>
                 </div>
                 </div>
               </div>
@@ -288,7 +288,7 @@
                       <div class="info-item">
                         <i class="fa fa-envelope"></i>
                         <h4><a href="#">helperSoft@Telegram</a></h4>
-                        <h4><a href="#">tabarak7d@gmail.com</a></h4>
+                        <h4><a href="#">tabareksoft@gmail.com</a></h4>
                       </div>
                     </div>
                     <div class="col-lg-4">
