--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col-lg-8 col-sm-9">
           <div class="left-info">
             <ul>
-              <li><a href="#"><i class="fa fa-envelope"></i>tabarak7d@gmail.com</a></li>
+              <li><a href="#"><i class="fa fa-envelope"></i>tabareksoft@gmail.com</a></li>
               <li><a href="#"><i class="fa fa-map-marker"></i>Baghdad</a></li>
             </ul>
           </div>
@@ -89,6 +89,7 @@
   </header>
   <!-- ***** Header Area End ***** -->
 
+
   <div class="main-banner" id="top">
     <div class="container">
       <div class="row" >
@@ -112,8 +113,6 @@
 
 
 
-
-
   <div class="services section" id="services" dir="rtl">
     <div class="container">
       <div class="row">
@@ -130,7 +129,7 @@
             <div class="col-lg-6 col-sm-6">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/pic2.png" alt="discover SEO" class="">
+                  <img src="assets/images/screens/sell/sellpill.png" alt="discover SEO" class="">
                 </div>
                 <h4>الفواتير شراء و بيع  و التعديل عليهن</h4>
                 <img src="assets/images/services-03.jpg" alt="data analysis" class="templatemo-feature">
@@ -139,7 +138,7 @@
             <div class="col-lg-6 col-sm-6">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/pic3.png" alt="data analysis" class="">
+                  <img src="assets/images/screens/stock/stock.png" alt="data analysis" class="">
                 </div>
                 <h4>المواد و خزنهن</h4>
                 <img src="assets/images/services-02.jpg" alt="data analysis" class="templatemo-feature">
@@ -148,7 +147,7 @@
             <div class="col-lg-6 col-sm-6">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/pic1.png" alt="precise data" class="">
+                  <img src="assets/images/screens/accountant/sellAccountintFull.png" alt="precise data" class="">
                 </div>
                 <h4>الحسابات</h4>
                 <img src="assets/images/services-01.jpg" alt="data analysis" class="templatemo-feature">
@@ -157,7 +156,7 @@
             <div class="col-lg-6 col-sm-6">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/pic4.png" alt="SEO marketing" class="">
+                  <img src="assets/images/screens/setting/setting.png" alt="SEO marketing" class="">
                 </div>
                 <h4>الاعدادت  و الصلاحيات</h4>
                 <img src="assets/images/services-04.jpg" alt="data analysis" class="templatemo-feature">
@@ -168,6 +167,114 @@
       </div>
     </div>
   </div>
+
+
+  <div class="projects section" id="screen" >
+    <div class="container">
+      <div class="row" dir="rtl">
+        <div class="col-lg-6">
+          <div class="section-heading"  >
+            <p>شرح نصي لعمل النظام</p>
+          </div>
+        </div>
+      </div> 
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="owl-features owl-carousel">
+
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/general.png" alt="">
+              <div class="down-content">
+                <h4>الواجهه الرئيسية</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+
+
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/registration/activetion1.png" alt="">
+              <div class="down-content">
+                <h4>التسجيل</h4>
+                <a href="#top"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/registration/login.png" alt="">
+              <div class="down-content">
+                <h4>تسجيل الدخول</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/item/add.png" alt="">
+              <div class="down-content">
+                <h4>المواد</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/pershuse/perchusePill.png" alt="">
+              <div class="down-content">
+                <h4>الشراء</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/sell/sellpill.png" alt="">
+              <div class="down-content">
+                <h4>البيع</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/stock/stock.png" alt="">
+              <div class="down-content">
+                <h4>المخزون</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/accountant/sellAccountintEmpty.png" alt="">
+              <div class="down-content">
+                <h4>الحسابات</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/setting/settingDark.png" alt="">
+              <div class="down-content">
+                <h4>الأعدادات</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/setting/permssions.png" alt="">
+              <div class="down-content">
+                <h4>الصلاحيات</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+
+            <div class="item" dir="rtl">
+              <img src="assets/images/screens/setting/storeInformation.png" alt="">
+              <div class="down-content">
+                <h4>معلومات المشروع</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
   <div class="infos section" id="infos">
     <div class="container">
@@ -219,7 +326,7 @@
                   </p>
                   <div dir="ltr" style="margin-bottom: 5%;">
                   <h6>@helperSoft</h6>
-                  <h6>tabarak7d@gmail.com</h6>
+                  <h6>tabareksoft@gmail.com</h6>
                 </div>
                 </div>
               </div>
@@ -288,7 +395,7 @@
                       <div class="info-item">
                         <i class="fa fa-envelope"></i>
                         <h4><a href="#">helperSoft@Telegram</a></h4>
-                        <h4><a href="#">tabarak7d@gmail.com</a></h4>
+                        <h4><a href="#">tabareksoft@gmail.com</a></h4>
                       </div>
                     </div>
                     <div class="col-lg-4">
