add screens pages1

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <img src="assets/images/screens/general.png" alt="">
               <div class="down-content">
                 <h4>الواجهه الرئيسية</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/general.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
 
