add screens pages2

--- a/index.html
+++ b/index.html
@@ -197,42 +197,42 @@
               <img src="assets/images/screens/registration/activetion1.png" alt="">
               <div class="down-content">
                 <h4>التسجيل</h4>
-                <a href="#top"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/registration.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item" dir="rtl">
               <img src="assets/images/screens/registration/login.png" alt="">
               <div class="down-content">
                 <h4>تسجيل الدخول</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/registration.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item" dir="rtl">
               <img src="assets/images/screens/item/add.png" alt="">
               <div class="down-content">
                 <h4>المواد</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/items.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item" dir="rtl">
               <img src="assets/images/screens/pershuse/perchusePill.png" alt="">
               <div class="down-content">
                 <h4>الشراء</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/pershuse.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item" dir="rtl">
               <img src="assets/images/screens/sell/sellpill.png" alt="">
               <div class="down-content">
                 <h4>البيع</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/sell.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item" dir="rtl">
               <img src="assets/images/screens/stock/stock.png" alt="">
               <div class="down-content">
                 <h4>المخزون</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/stock.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
 
@@ -240,7 +240,7 @@
               <img src="assets/images/screens/accountant/sellAccountintEmpty.png" alt="">
               <div class="down-content">
                 <h4>الحسابات</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/accountant.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
 
@@ -248,7 +248,7 @@
               <img src="assets/images/screens/setting/settingDark.png" alt="">
               <div class="down-content">
                 <h4>الأعدادات</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/setting.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
 
@@ -256,7 +256,7 @@
               <img src="assets/images/screens/setting/permssions.png" alt="">
               <div class="down-content">
                 <h4>الصلاحيات</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/setting.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
 
@@ -264,7 +264,7 @@
               <img src="assets/images/screens/setting/storeInformation.png" alt="">
               <div class="down-content">
                 <h4>معلومات المشروع</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
+                <a href="pages/screensPosts/setting.html"><i class="fa fa-link"></i></a>
               </div>
             </div>
 
